[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "rsgraph"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy == 1.23.3",
    "matplotlib == 3.6.0",
    "networkx = 2.8.7", 
]

[tool.maturin]
python-source = "python"
